feature: swagger, post, chat
