# swagger.json
@@ -15,7 +15,7 @@
     }
   },
   "paths": {
-    "/": {
+    "/health": {
       "get": {
         "tags": [],
         "parameters": [],
@@ -35,7 +35,9 @@
     },
     "/post": {
       "post": {
-        "tags": [],
+        "tags": [
+          "Post"
+        ],
         "parameters": [],
         "requestBody": {
           "content": {
@@ -53,15 +55,22 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "string"
+                  "$ref": "#/components/schemas/IPost"
                 }
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       },
       "get": {
-        "tags": [],
+        "tags": [
+          "Post"
+        ],
         "parameters": [],
         "responses": {
           "200": {
@@ -71,24 +80,31 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Post"
+                    "$ref": "#/components/schemas/IPost"
                   }
                 }
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       }
     },
     "/post/{id}": {
       "get": {
-        "tags": [],
+        "tags": [
+          "Post"
+        ],
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "schema": {
-              "type": "string"
+              "type": "number"
             },
             "description": "",
             "required": true
@@ -100,21 +116,28 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "string"
+                  "$ref": "#/components/schemas/IPost.Nullable"
                 }
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       },
       "patch": {
-        "tags": [],
+        "tags": [
+          "Post"
+        ],
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "schema": {
-              "type": "string"
+              "type": "number"
             },
             "description": "",
             "required": true
@@ -131,134 +154,68 @@
           "required": true
         },
         "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "schema": {
-              "type": "string"
-            },
-            "description": "",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/user": {
-      "post": {
-        "tags": [],
-        "parameters": [],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreateUserDto"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
           "201": {
             "description": "",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "string"
+                  "$ref": "#/components/schemas/UpdateResult"
                 }
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       },
-      "get": {
-        "tags": [],
-        "parameters": [],
+      "delete": {
+        "tags": [
+          "Post"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "number"
+            },
+            "description": "",
+            "required": true
+          }
+        ],
         "responses": {
           "200": {
             "description": "",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "string"
+                  "$ref": "#/components/schemas/UpdateResult"
                 }
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       }
     },
-    "/user/{id}": {
-      "get": {
-        "tags": [],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "schema": {
-              "type": "string"
-            },
-            "description": "",
-            "required": true
-          }
+    "/auth/signup": {
+      "post": {
+        "tags": [
+          "Auth"
         ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      },
-      "patch": {
-        "tags": [],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "schema": {
-              "type": "string"
-            },
-            "description": "",
-            "required": true
-          }
-        ],
+        "parameters": [],
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateUserDto"
+                "$ref": "#/components/schemas/AuthBody"
               }
             }
           },
@@ -270,33 +227,38 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "string"
+                  "type": "string",
+                  "format": "date-time"
                 }
               }
             }
           }
         }
-      },
-      "delete": {
-        "tags": [],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "schema": {
-              "type": "string"
-            },
-            "description": "",
-            "required": true
-          }
+      }
+    },
+    "/auth/login": {
+      "post": {
+        "tags": [
+          "Auth"
         ],
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AuthBody"
+              }
+            }
+          },
+          "required": true
+        },
         "responses": {
           "200": {
             "description": "",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "string"
+                  "$ref": "#/components/schemas/LoginResult"
                 }
               }
             }
@@ -309,15 +271,27 @@
     "schemas": {
       "CreatePostDto": {
         "type": "object",
-        "properties": {},
-        "nullable": false
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "content": {
+            "type": "string"
+          },
+          "isPublished": {
+            "type": "boolean"
+          }
+        },
+        "nullable": false,
+        "required": [
+          "title",
+          "content",
+          "isPublished"
+        ]
       },
-      "Post": {
+      "IPost": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "number"
-          },
           "title": {
             "type": "string"
           },
@@ -329,31 +303,227 @@
           },
           "isPublished": {
             "type": "boolean"
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "deleted_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "id": {
+            "type": "number"
+          },
+          "user": {
+            "oneOf": [
+              {
+                "type": "number"
+              },
+              {
+                "$ref": "#/components/schemas/IUser"
+              }
+            ]
           }
         },
         "nullable": false,
         "required": [
-          "id",
           "title",
           "content",
           "views",
-          "isPublished"
+          "isPublished",
+          "created_at",
+          "updated_at",
+          "deleted_at",
+          "id"
+        ]
+      },
+      "IUser": {
+        "type": "object",
+        "properties": {
+          "password": {
+            "type": "string"
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "deleted_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "id": {
+            "type": "number"
+          },
+          "username": {
+            "type": "string"
+          }
+        },
+        "nullable": false,
+        "required": [
+          "password",
+          "created_at",
+          "updated_at",
+          "deleted_at",
+          "id",
+          "username"
+        ]
+      },
+      "IPost.Nullable": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "content": {
+            "type": "string"
+          },
+          "views": {
+            "type": "number"
+          },
+          "isPublished": {
+            "type": "boolean"
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "deleted_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "id": {
+            "type": "number"
+          },
+          "user": {
+            "oneOf": [
+              {
+                "type": "number"
+              },
+              {
+                "$ref": "#/components/schemas/IUser"
+              }
+            ]
+          }
+        },
+        "nullable": true,
+        "required": [
+          "title",
+          "content",
+          "views",
+          "isPublished",
+          "created_at",
+          "updated_at",
+          "deleted_at",
+          "id"
         ]
       },
       "UpdatePostDto": {
         "type": "object",
-        "properties": {},
-        "nullable": false
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "content": {
+            "type": "string"
+          },
+          "isPublished": {
+            "type": "boolean"
+          }
+        },
+        "nullable": false,
+        "required": [
+          "title",
+          "content",
+          "isPublished"
+        ]
       },
-      "CreateUserDto": {
+      "UpdateResult": {
+        "type": "object",
+        "properties": {
+          "raw": {
+            "description": "Raw SQL result returned by executed query."
+          },
+          "affected": {
+            "type": "number",
+            "description": "Number of affected rows/documents\nNot all drivers support this"
+          },
+          "generatedMaps": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ObjectLiteral"
+            },
+            "description": "Generated values returned by a database.\nHas entity-like structure (not just column database name and values)."
+          }
+        },
+        "nullable": false,
+        "required": [
+          "raw",
+          "generatedMaps"
+        ],
+        "description": "Result object returned by UpdateQueryBuilder execution."
+      },
+      "ObjectLiteral": {
         "type": "object",
         "properties": {},
-        "nullable": false
+        "nullable": false,
+        "description": "Interface of the simple literal object with any string keys."
       },
-      "UpdateUserDto": {
+      "AuthBody": {
         "type": "object",
-        "properties": {},
-        "nullable": false
+        "properties": {
+          "username": {
+            "type": "string",
+            "maxLength": 50,
+            "minLength": 1
+          },
+          "password": {
+            "type": "string",
+            "maxLength": 50,
+            "minLength": 8
+          }
+        },
+        "nullable": false,
+        "required": [
+          "username",
+          "password"
+        ]
+      },
+      "LoginResult": {
+        "type": "object",
+        "properties": {
+          "access_token": {
+            "type": "string"
+          },
+          "access_token_ttl": {
+            "type": "string"
+          },
+          "refresh_token": {
+            "type": "string"
+          },
+          "refresh_token_ttl": {
+            "type": "string"
+          }
+        },
+        "nullable": false,
+        "required": [
+          "access_token",
+          "access_token_ttl",
+          "refresh_token",
+          "refresh_token_ttl"
+        ]
       }
     },
     "securitySchemes": {
